WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155236
[GStreamer] fix media player conflicts
https://bugs.webkit.org/show_bug.cgi?id=155236
Summary
[GStreamer] fix media player conflicts
Philippe Normand
Reported
2016-03-09 10:07:20 PST
See
https://bugs.webkit.org/show_bug.cgi?id=153540#c12
Attachments
patch
(7.94 KB, patch)
2016-03-09 10:15 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
patch
(7.92 KB, patch)
2016-03-09 10:15 PST
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2016-03-09 10:15:02 PST
Created
attachment 273439
[details]
patch
Philippe Normand
Comment 2
2016-03-09 10:15:48 PST
Created
attachment 273440
[details]
patch
Martin Robinson
Comment 3
2016-03-09 10:22:54 PST
Comment on
attachment 273440
[details]
patch Do you mind mentioning in the Changelog that this fixes tests failing on the bots?
Philippe Normand
Comment 4
2016-03-09 10:23:23 PST
(In reply to
comment #3
)
> Comment on
attachment 273440
[details]
> patch > > Do you mind mentioning in the Changelog that this fixes tests failing on the > bots?
Alright :)
Philippe Normand
Comment 5
2016-03-09 10:26:56 PST
Committed
r197863
: <
http://trac.webkit.org/changeset/197863
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug